# ft_multimedia

./: .gitignore  README.en.md  README.md
image_framework/frameworks/innerkitsimpl/codec/src/: image_source.cpp
image_framework/frameworks/innerkitsimpl/common/src/: pixel_map.cpp
image_framework/frameworks/innerkitsimpl/pixelconverter/ft_build/: BUILD.gn
image_framework/frameworks/innerkitsimpl/test/unittest/: mock_hitrace_meter_test.cpp
image_framework/frameworks/innerkitsimpl/utils/ft_build/: BUILD.gn
image_framework/frameworks/innerkitsimpl/utils/src/: image_trace.cpp  image_utils.cpp
image_framework/frameworks/kits/js/common/: image_packer_napi.cpp  image_source_napi.cpp  pixel_map_napi.cpp
image_framework/interfaces/innerkits/ft_build/: BUILD.gn
image_framework/interfaces/kits/js/common/ft_build/: BUILD.gn
image_framework/interfaces/kits/js/common/include/: image_napi.h
image_framework/mock/native/include/: hitrace_meter.h
image_framework/mock/native/src/: hitrace_meter.cpp
image_framework/plugins/common/libs/ft_build/: BUILD.gn
image_framework/plugins/common/libs/image/formatagentplugin/: imageformatagent.pluginmeta
image_framework/plugins/common/libs/image/formatagentplugin/ft_build/: BUILD.gn
image_framework/plugins/common/libs/image/formatagentplugin/src/: bmp_format_agent.cpp  gif_format_agent.cpp  jpeg_format_agent.cpp  png_format_agent.cpp
image_framework/plugins/common/libs/image/libbmpplugin/: bmpplugin.pluginmeta
image_framework/plugins/common/libs/image/libbmpplugin/ft_build/: BUILD.gn
image_framework/plugins/common/libs/image/libbmpplugin/include/: bmp_decoder.h  bmp_stream.h
image_framework/plugins/common/libs/image/libgifplugin/: gifplugin.pluginmeta
image_framework/plugins/common/libs/image/libgifplugin/ft_build/: BUILD.gn
image_framework/plugins/common/libs/image/libgifplugin/src/: gif_decoder.cpp
image_framework/plugins/common/libs/image/libheifplugin/: heifplugin.pluginmeta
image_framework/plugins/common/libs/image/libheifplugin/include/: heif_decoder.h
image_framework/plugins/common/libs/image/libjpegplugin/: jpegplugin.pluginmeta
image_framework/plugins/common/libs/image/libjpegplugin/ft_build/: BUILD.gn
image_framework/plugins/common/libs/image/libjpegplugin/src/: exif_info.cpp  jpeg_decoder.cpp
image_framework/plugins/common/libs/image/libpngplugin/: pngplugin.pluginmeta
image_framework/plugins/common/libs/image/libpngplugin/ft_build/: BUILD.gn
image_framework/plugins/common/libs/image/libpngplugin/include/: png_decoder.h
image_framework/plugins/common/libs/image/libpngplugin/src/: plugin_export.cpp  png_decoder.cpp
image_framework/plugins/common/libs/image/librawplugin/: rawplugin.pluginmeta
image_framework/plugins/common/libs/image/librawplugin/ft_build/: BUILD.gn
image_framework/plugins/common/libs/image/libwebpplugin/: webpplugin.pluginmeta
image_framework/plugins/common/libs/image/libwebpplugin/ft_build/: BUILD.gn
image_framework/plugins/common/libs/image/libwebpplugin/include/: multimedia_templates.h  webp_decoder.h
image_framework/plugins/manager/ft_build/: BUILD.gn
image_framework/plugins/manager/include/: attr_data.h  plugin_class_base.h  plugin_common_type.h  plugin_errors.h  plugin_service.h  priority_scheme.h
image_framework/plugins/manager/include/image/: abs_image_decompress_component.h  abs_image_format_agent.h
image_framework/plugins/manager/include/pluginbase/: plugin_export.h
image_framework/plugins/manager/src/common/: attr_data.cpp
image_framework/plugins/manager/src/framework/: capability.cpp  capability.h  impl_class_mgr.h  plugin.h  plugin_fw.cpp  plugin_fw.h  plugin_info_lock.cpp  plugin_mgr.h
image_framework/plugins/manager/src/thirdpartyadp/gstreamer/: gst_plugin_fw.cpp
image_framework/plugins/manager/test/: BUILD.gn
image_framework/plugins/manager/test/unittest/common/plugin_example/interface/vision/: abs_image_detector.h
image_framework/plugins/manager/test/unittest/common/plugin_example/plugin_example1/: cloud_label_detector.cpp  cloud_label_detector.h  label_detector.cpp  label_detector.h  plugin_export.cpp
image_framework/plugins/manager/test/unittest/common/plugin_example/plugin_example2/: cloud_label_detector2.cpp  cloud_label_detector2.h  label_detector2.cpp  label_detector2.h
image_framework/plugins/manager/test/unittest/common/plugin_example/plugin_example3/: cloud_label_detector3.cpp  cloud_label_detector3.h  label_detector3.cpp  label_detector3.h
image_framework/test/resource/image/perftest/: ImagePerformanceTest_baseline.xml
image_framework/test/resource/plugins/: ohos_test.xml
image_framework/test/resource/plugins/plugin_example2/: plugin_example2.pluginmeta
include/hitrace_meter/: hitrace_meter.h
