# Copyright (c) 2023 Huawei Technologies Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

import("//build/gn/fangtian.gni")

ft_shared_library("pluginmanager") {
  include_dirs = [
    "//image_framework/plugins/manager/include",
    "//image_framework/plugins/manager/include/pluginbase",
    "//image_framework/plugins/manager/include/utils",
    "//image_framework/plugins/manager/src/common",
    "//image_framework/plugins/manager/src/framework",
    "//image_framework/plugins/manager/src/pluginbase",
    "//image_framework/plugins/manager/src/thirdpartyadp/gstreamer",
    "//image_framework/frameworks/innerkitsimpl/utils/include",
    "//image_framework/interfaces/innerkits/include",
    "//third_party/json/single_include/nlohmann",
  ]

  sources = [
    "//image_framework/plugins/manager/src/common/attr_data.cpp",
    "//image_framework/plugins/manager/src/common/platform_adp.cpp",
    "//image_framework/plugins/manager/src/framework/capability.cpp",
    "//image_framework/plugins/manager/src/framework/impl_class.cpp",
    "//image_framework/plugins/manager/src/framework/impl_class_key.cpp",
    "//image_framework/plugins/manager/src/framework/impl_class_mgr.cpp",
    "//image_framework/plugins/manager/src/framework/json_helper.cpp",
    "//image_framework/plugins/manager/src/framework/plugin.cpp",
    "//image_framework/plugins/manager/src/framework/plugin_fw.cpp",
    "//image_framework/plugins/manager/src/framework/plugin_info_lock.cpp",
    "//image_framework/plugins/manager/src/framework/plugin_mgr.cpp",
    "//image_framework/plugins/manager/src/plugin_server.cpp",
    "//image_framework/plugins/manager/src/pluginbase/plugin_class_base.cpp",
    "//image_framework/plugins/manager/src/thirdpartyadp/gstreamer/gst_plugin_fw.cpp",
  ]

  cflags = [ "-DIMAGE_DEBUG_FLAG" ]
  ldflags = [ "-Wl,-Bsymbolic" ]

  configs = [
    "//build/gn/configs/system_libs:hilog_config",
    "//build/gn/configs/system_libs:c_utils_config",
  ]
}
