# Copyright (c) 2023 Huawei Technologies Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

import("//build/gn/fangtian.gni")

ft_shared_library("image_utils") {
  include_dirs = [
    "//image_framework/frameworks/innerkitsimpl/utils/include",
    "//image_framework/plugins/manager/include",
    "//image_framework/interfaces/innerkits/include",
  ]

  sources = [
    "//image_framework/frameworks/innerkitsimpl/utils/src/image_trace.cpp",
    "//image_framework/frameworks/innerkitsimpl/utils/src/image_utils.cpp",
  ]

  defines = [ "DUAL_ADAPTER" ]

  configs = [
    "//build/gn/configs/system_libs:hilog_config",
    "//build/gn/configs/system_libs:c_utils_config",
    "//build/gn/configs/system_libs:hitrace_meter_config",
  ]

  deps = [ "//image_framework/plugins/manager/ft_build:pluginmanager" ]
}
