# Copyright (c) 2023 Huawei Technologies Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

import("//build/gn/fangtian.gni")

group("multimediaplugin") {
  deps = [
    "../image/formatagentplugin/ft_build:imageformatagent",
    "../image/libbmpplugin/ft_build:bmpplugin",
    "../image/libgifplugin/ft_build:gifplugin",
    "../image/libjpegplugin/ft_build:jpegplugin",
    "../image/libpngplugin/ft_build:pngplugin",
    "../image/librawplugin/ft_build:rawplugin",
    "../image/libwebpplugin/ft_build:webpplugin",
  ]
}
