# Copyright (c) 2023 Huawei Technologies Co., Ltd. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

import("//build/gn/fangtian.gni")

ft_shared_library("rawplugin") {
  include_dirs = [
    "//image_framework/frameworks/innerkitsimpl/stream/include",
    "//image_framework/frameworks/innerkitsimpl/utils/include",
    "//image_framework/interfaces/innerkits/include",
    "//image_framework/plugins/common/libs/image/libjpegplugin/include",
    "//image_framework/plugins/common/libs/image/librawplugin/include",
    "//image_framework/plugins/manager/include",
    "//image_framework/plugins/manager/include/image",
    "//image_framework/plugins/manager/include/pluginbase",
    "//third_party/piex",
  ]

  sources = [
    "//image_framework/plugins/common/libs/image/librawplugin/src/plugin_export.cpp",
    "//image_framework/plugins/common/libs/image/librawplugin/src/raw_decoder.cpp",
    "//image_framework/plugins/common/libs/image/librawplugin/src/raw_stream.cpp",
    "//third_party/piex/src/binary_parse/cached_paged_byte_array.cc",
    "//third_party/piex/src/binary_parse/range_checked_byte_ptr.cc",
    "//third_party/piex/src/image_type_recognition/image_type_recognition_lite.cc",
    "//third_party/piex/src/piex.cc",
    "//third_party/piex/src/tiff_directory/tiff_directory.cc",
    "//third_party/piex/src/tiff_parser.cc",
  ]

  cflags = [ "-DIMAGE_DEBUG_FLAG" ]
  defines = [ "DUAL_ADAPTER" ]

  configs = [
    "//build/gn/configs/system_libs:hilog_config",
    "//build/gn/configs/system_libs:c_utils_config",
    "//build/gn/configs/system_libs:skia_config",
  ]

  deps = [
    "//image_framework/interfaces/innerkits/ft_build:image_native",
    "//image_framework/plugins/common/libs/image/libjpegplugin/ft_build:jpegplugin",
    "//image_framework/plugins/manager/ft_build:pluginmanager",
  ]
}
